# deepdrr

./: .dockerignore  .gitignore  DEV_README.md  Dockerfile  README.md  TODO.md  apiv2_test.py  compare_depth.ipynb  docker-compose.yml  drr.json  environment.yml  profile.speedscope.json  pyproject.toml  requirements.txt  scratch.ipynb  setup.py
deepdrr/: __init__.py  coco_utils.py
deepdrr/frontend/: backend.py  cache.py  devices.py  frontend.py  node_content.py  primitive.py  profiles.py  render_serial.py  renderable.py  renderer.py  scene.py  transform_manager.py  volume_processing.py
deepdrr/instruments/: base.py
deepdrr/projector/: cuda_scatter_structs.py  mass_attenuation.py  material_coefficients.py  peel_postprocess_kernel.cu  project_kernel.cu  project_kernel.cu.cubin  projector.py
deepdrr/projector/cubic/internal/: cubicTex3D_kernel.cu
deepdrr/pyrenderdrr/: constants.py  renderer.py
deepdrr/pyrenderdrr/shaders/: density.frag  density.vert  density_between.frag  dual_peeling_init_fragment.glsl  dual_peeling_init_vertex.glsl  dual_peeling_peel_fragment.glsl  segmentation.vert
deepdrr/serial/: render.py
deepdrr/two/: backend.py  cache.py  devices.py  render_serial.py  renderable.py  renderer.py  scene.py  transform_manager.py  volume_processing.py
deepdrr/utils/: mesh_utils.py
deepdrr/vol/: mesh.py  primitive.py  volume.py
notebooks/: apiv2.ipynb  apiv2_test.ipynb  drr.json  rasterize.json  v2_api_demo.ipynb
tests/: test_core.py  test_kwire.py  test_scatter.py
tests/notebooks/: compare_depth.ipynb
